tests/NormalTests/paczka1/fuzzy1/93879691.err
Error in line 12: e6Zt A282 22,9
Error in line 19: e6Zt A569 58,5
Error in line 8: S204 A203 68,4
Error in line 25: Otid54 A569 189,0
Error in line 22: e6Zt A282 91,0
Error in line 31: e6Zt A203 33,8
